fixed alignment

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,24 +1,30 @@
 .about {
-  width: 82%;
+  width: 100%;
   height: 70%;
   border-top: 1px solid #61892f;
   border-bottom: 1px solid #61892f;
   background: #222629;
   /* margin-left: 400px; */
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
   position: relative;
   z-index: 20;
   float: right;
 }
 
 .imgContainer {
-  width: 35%;
+  border-radius: 52%;
+  width: 40%;
 }
 
 .imgContainer img {
+  padding-top: 1rem;
   width: 100%;
   max-width: 300px;
+  max-height: 300px;
+  border-radius: 52%;
 }
 
 .about h1 {
@@ -26,21 +32,24 @@
 }
 
 .contentbox {
-  width: 60%;
+  width: 80%;
   height: 100%;
   margin-left: 10px;
   min-width: 150px;
   margin-right: 50px;
-  padding: 40px 50px;
+  min-width: 100%;
+  padding: 40px 15px 10px 15px;
 }
 
 .contentbox p {
-  font-size: 20px;
+  font-size: 25px;
+  text-align: center;
   color: #86c232;
   font-family: 'Open Sans', sans-serif;
+  padding-left: 10px;
 }
 
-@media (max-width: 390px) {
+/* @media (max-width: 390px) {
   .about {
     min-width: 100%;
     flex-direction: column;
@@ -84,4 +93,4 @@
   .about {
     width: 90%;
   }
-}
+} */
