--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -8,15 +8,16 @@
   font-family: 'Aboreto';
   margin-left: 0 auto;
 }
-.navSecondContainer {
-  width: 40%;
-  height: 100%;
 
-  display: flex;
+.navSecondContainer {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
   align-items: center;
   justify-content: space-between;
 }
-.languageBtn {
+
+/* .languageBtn {
   margin-left: 40px;
 }
 .languageBtn button {
@@ -28,6 +29,11 @@
   border-radius: 10px;
   border: 1px solid #86c232;
   padding: 2px 5px;
+} */
+
+.navLinkBtn {
+  text-align: center;
+  padding-top: 1.5em;
 }
 
 .navLinkBtn a {
