--- a/styles/ProjectBox.module.css
+++ b/styles/ProjectBox.module.css
@@ -77,7 +77,7 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-@media (max-width: 1490px) {
+/* @media (max-width: 1490px) {
   .projectBoxmainContainer {
     min-width: 400x;
     max-height: 380px;
@@ -97,4 +97,4 @@
   .imageBox {
     margin-bottom: -30px;
   }
-}
+} */
