--- a/styles/skills.module.css
+++ b/styles/skills.module.css
@@ -1,17 +1,18 @@
 .skillmaincontainer {
-  width: 82%;
+  width: 100%;
   height: 70vh;
   border-top: 1px solid #61892f;
   border-bottom: 1px solid #61892f;
   background: #222629;
-  float: right;
-  padding: 2rem 9rem;
+  padding: 0 5rem;
+  /* float: right; */
+  /* padding: 2rem 9rem; */
 }
 
 .image {
   z-index: 40;
   position: relative;
-
+  /* background-color: #61892f; */
   max-width: 18%;
   max-height: 17%;
   margin: 20px 20px;
@@ -21,7 +22,9 @@
 }
 
 .image img {
-  width: 100%;
+  max-width: 90px;
+  max-height: 90px;
+  padding: 0 10px;
 }
 
 .iconscontainer {
@@ -41,7 +44,7 @@
   }
 }
 
-@media (max-width: 575px) {
+/* @media (max-width: 575px) {
   .skillmaincontainer {
     min-width: 90%;
     padding: 0;
@@ -60,7 +63,7 @@
   }
 }
 
-@media (max-width: 1160px) {
+/* @media (max-width: 1160px) {
   .skillmaincontainer {
     width: 100%;
     padding: 0;
@@ -68,16 +71,17 @@
   .image {
     max-width: 15%;
   }
-}
+} */
 
-@media (max-width: 1490px) {
-  .skillmaincontainer {
-    max-width: 90%;
+@media (min-width: 1141px) {
+  .iconscontainer {
+    max-width: 900px;
+    margin: 0 auto;
   }
 }
 
-@media (min-width: 1020px) {
+/* @media (min-width: 1020px) {
   .image {
     max-width: 120px;
   }
-}
+} */
